fixed overflow issue dev2

--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -1714,6 +1714,9 @@ form.hide-container {
 
 // Order Book Panel
 .order-book-panel {
+	.overflow_hidden {
+		overflow: hidden !important;
+	}
 	.header {
 		background: #1c1f27;
 		font-size: 16px;
